# backpack

./: .gitignore  Cargo.toml  README.md  initial-tool-list.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/bp-core/: Cargo.toml
crates/bp-core/src/: error.rs  kdf.rs  lib.rs  pubkey.rs  stream.rs
crates/bp-nostr/: Cargo.toml
crates/bp-nostr/src/: client.rs  contacts.rs  event.rs  lib.rs  main.rs  nip04.rs  nip19.rs  nip44.rs  nip46.rs  pairings.rs  profile.rs  relay.rs
crates/bp-nostr/tests/: live.rs  signer.rs
crates/canary/: Cargo.toml
crates/canary/src/: lib.rs  main.rs
crates/cph-core/: Cargo.toml
crates/cph-core/src/: error.rs  lib.rs  pubkey.rs  stream.rs
crates/keyring/: Cargo.toml
crates/keyring/src/: lib.rs  main.rs
crates/keyring/src/tui/: app.rs  main.rs  ui.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: app.rs  clipboard.rs  form.rs  main.rs  session.rs  theme.rs  ui.rs
crates/sats/: Cargo.toml
crates/sats/src/: esplora.rs  hd.rs  lib.rs  main.rs  wallet.rs
crates/sats/tests/: live.rs
crates/scrub/: Cargo.toml
crates/scrub/src/: detect.rs  jpeg.rs  lib.rs  main.rs  pdf.rs  png.rs  report.rs
crates/scrub/tests/: formats.rs
crates/split/: Cargo.toml
crates/split/src/: lib.rs  main.rs
crates/stamp/: Cargo.toml
crates/stamp/src/: calendar.rs  lib.rs  main.rs  ots.rs  ser.rs
crates/stamp/tests/: live.rs
crates/veil/: Cargo.toml
crates/veil/src/: lib.rs  main.rs
deck/: README.md  build-sd.sh  install-backpack.sh
docs/: README.md  bp-core.md  canary.md  cph-core.md  deploy.md  keyring.md  launcher.md  nostr.md  sats.md  scrub.md  split.md  stamp.md  veil.md  workflows.md
