[workspace]
resolver = "2"
members = ["crates/cph-core", "crates/veil", "crates/scrub", "crates/split"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/squint/cipherpunk"

[workspace.dependencies]
cph-core = { path = "crates/cph-core" }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rpassword = "7"
img-parts = "0.3"
kamadak-exif = "0.6"
lopdf = "0.36"
sharks = "0.5"
sha2 = "0.10"
hex = "0.4"
