[workspace]
resolver = "2"
members = [
    "crates/bp-core",
    "crates/veil",
    "crates/scrub",
    "crates/split",
    "crates/keyring",
    "crates/launcher",
    "crates/bp-nostr",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/squintdev/backpack"

# Deck builds: small, stripped, self-contained binaries.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.dependencies]
bp-core = { path = "crates/bp-core" }
keyring = { path = "crates/keyring" }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rpassword = "7"
img-parts = "0.3"
kamadak-exif = "0.6"
lopdf = "0.36"
sharks = "0.5"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
hkdf = "0.12"
ratatui = "0.29"
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
bech32 = "0.11"
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
chacha20 = "0.9"
hmac = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
