[package]
name = "bp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared crypto primitives for the backpack tool suite"

[dependencies]
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
