[package]
name = "bp-nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Nostr client CLI for the backpack suite"

[[bin]]
name = "nostr"
path = "src/main.rs"

[dependencies]
keyring = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
k256 = { workspace = true }
bech32 = { workspace = true }
tungstenite = { workspace = true }
rustls = { workspace = true }
rand_core = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
