[package]
name = "keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Keypair manager CLI for the cipherpunk suite"

[[bin]]
name = "keyring"
path = "src/main.rs"

[dependencies]
cph-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
rpassword = { workspace = true }
directories = { workspace = true }
