[package]
name = "launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Boot menu / launcher TUI for the cipherpunk suite"

[[bin]]
name = "cipherpunk"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
