[package]
name = "launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Boot menu / launcher TUI for the backpack suite"

[[bin]]
name = "backpack"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
keyring = { workspace = true }
bp-nostr = { path = "../bp-nostr" }
veil = { path = "../veil" }
scrub = { path = "../scrub" }
split = { path = "../split" }
hex = { workspace = true }
zeroize = { workspace = true }
