[package]
name = "veil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File encryptor CLI for the backpack suite"

[lib]
name = "veil"
path = "src/lib.rs"

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
bp-core = { workspace = true }
keyring = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
